--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<p class="details"><a href="itsme.jpg"><img src="itsme.jpg" class="floatcenter" alt="Its Me" width="500" height="600"></a></p>
 			<br>
-             		<p>Hello World! My name is Monique and I am a CIS student. I also work full time for a hot tub manufacturer and am a single mom of two kids. I'm a crafty person who likes to knit, crochet, and diy whatever I can.</p>
+             		<p>Hello World! My name is Monique and I am a CIS student. I'm currently working on my Computer Information Systems Cert. I also work full time for a hot tub manufacturer and am a single mom of two kids. I'm a crafty person who likes to knit, crochet, and diy whatever I can. I love to read in whatever free time I get, my favorite author is Jim Butcher, I'm currently re-reading The Wheel of Time series, because the tv show made me realize I remember very little from that series. I have two cats and, now that I finally have the space, I built myself a desktop PC last year.</p>
 			<br>
 			<br>
 	</main>
